# atap-corpus-slicer

./: .gitignore  DOCS.md  README.md  corpus-slicer.ipynb  pyproject.toml  requirements.txt
atap_corpus_slicer/: CorpusSlicer.py  Operation.py
